--- a/wp-content/themes/expert-massage/views/includes/admin/promotions.pug
+++ b/wp-content/themes/expert-massage/views/includes/admin/promotions.pug
@@ -13,7 +13,7 @@
           label.block-card__label(for=`applicationFormHeading${promo.id}`) Заголовок формы с записью на массаж:
           textarea.block-card__input.form__input.form__input_max-width(id=`applicationFormHeading${promo.id}` name='application_heading')= promo.application_heading
         .block-card__row
-          label.block-card__label(for=`applicationFormText${promo.id}`) Заголовок формы с записью на массаж:
+          label.block-card__label(for=`applicationFormText${promo.id}`) Текст формы с записью на массаж:
           textarea.block-card__input.form__input.form__input_max-width(id=`applicationFormText${promo.id}` name='application_text' rows='5')= promo.application_text
         .block-card__row.block-card__row_wrap
           label.block-card__label(for=`priceListLabel${promo.id}`) Подпись акции в прайс-листе:
