--- a/wp-content/themes/expert-massage/views/includes/modules/content/price-list/price-list.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/price-list/price-list.pug
@@ -43,12 +43,12 @@ section.price-list
                   - additionalClass = `${additionalClass} table__row_highlight`
                 tr.table__row(class=additionalClass)
                   td.table__cell
-                    b.price-list__massage-name(class=(((massage.id === '6') || (massage.id === '11') || (massage.id === '12')) ? 'price-list__massage-name_notification' : false))= massage.name
+                    span.price-list__massage-name= massage.name
                   td.table__cell
                     if massage.old_price
                       span.price-list__old-price!= `${massage.old_price}&thinsp;₽`
                       br
-                    span.price-list__first-price!= `${massage.first_price}&thinsp;₽`
+                    span.price-list__first-price(class=(((massage.id === '6') || (massage.id === '11') || (massage.id === '12')) ? 'price-list__cell-notification' : false))!= `${massage.first_price}&thinsp;₽`
                   td.table__cell
                     if massage.old_price
                       span.price-list__old-price!= `${massage.old_price}&thinsp;₽`
