--- a/wp-content/themes/expert-massage/views/includes/admin/photos.pug
+++ b/wp-content/themes/expert-massage/views/includes/admin/photos.pug
@@ -35,6 +35,17 @@ mixin result-photo-card(photo, selectedMassage)
       .block-card__row
         b Формат - jpg, приблизительное соотношение сторон - 10:6, предпочтительная ширина - 1200 пикселей
       .block-card__row
+        label
+          input(type='checkbox' name='collage' checked=photo.collage)
+          span Коллаж фотографий
+      .collage-photo-loader(class=(photo.collage ? false : 'hidden'))
+        .block-card__row
+          label.block-card__label(for=`collagePhoto${photosCount}`) Доп. фото:
+          input.block-card__input(id=`collagePhoto${photosCount}` type='file' name='collage-photo')
+          img.block-card__preview(src=photo.collage.mobile.jpg['2x'] alt='' width='350')
+        .block-card__row
+          b Формат - jpg, приблизительное соотношение сторон - 2:1, предпочтительная ширина - 1200 пикселей
+      .block-card__row
         button.form__submitter(type='submit') Обновить
         button.form__submitter.form__submitter_delete(type='button' data-action='results_photo_delete') Удалить
 
@@ -62,6 +73,17 @@ mixin result-photo-card(photo, selectedMassage)
         img.block-card__preview(src='#' alt='' width='350')
       .block-card__row
         b Формат - jpg, приблизительное соотношение сторон - 10:6, предпочтительная ширина - 1200 пикселей
+      .block-card__row
+        label
+          input(type='checkbox' name='collage' checked=photo.collage)
+          span Коллаж фотографий
+      .collage-photo-loader(class=(photo.collage ? false : 'hidden'))
+        .block-card__row
+          label.block-card__label(for=`collagePhoto${photosCount}`) Доп. фото:
+          input.block-card__input(id=`collagePhoto${photosCount}` type='file' name='collage-photo')
+          img.block-card__preview(src=photo.collage.mobile.jpg['2x'] alt='' width='350')
+        .block-card__row
+          b Формат - jpg, приблизительное соотношение сторон - 2:1, предпочтительная ширина - 1200 пикселей
       .block-card__row
         button.form__submitter(type='submit') Добавить
   h3 Лицо
@@ -128,18 +150,30 @@ mixin result-photo-card(photo, selectedMassage)
 
 script.
   const wrapper = document.querySelector(`.wrap`);
-  wrapper.addEventListener('change', showImagePreview);
-  wrapper.addEventListener('submit', evt => sendForm(evt, evt.target));
+  wrapper.addEventListener(`change`, evt => {
+    if (evt.target.files) {
+      readURL(evt.target);
+    } else if (evt.target.name === `collage`) {
+      toggleCollageWrap(evt.target);
+    }
+  });
+  wrapper.addEventListener('submit', evt => {
+    if (evt.target.collage.checked && !evt.target[`collage-photo`].files.length && !evt.target.querySelector(`.collage-photo-loader .block-card__preview`).src) {
+      alert('Необходимо добавить фотографию для коллажа');
+      evt.preventDefault();
+      return;
+    }
+    sendForm(evt, evt.target);
+  });
   wrapper.addEventListener('click', evt => {
     if (evt.target.classList.contains(`form__submitter_delete`)) {
       sendForm(evt, evt.target.form, evt.target.dataset.action)
     }
   });
 
-  function showImagePreview(evt) {
-    if (evt.target.files) {
-      readURL(evt.target);
-    }
+  function toggleCollageWrap(collageToggler) {
+    collageToggler.closest(`.block-card`).querySelector(`.collage-photo-loader`)
+      .classList[collageToggler.checked ? `remove` : `add`](`hidden`);
   }
 
   function readURL(input) {
