--- a/wp-content/themes/expert-massage/views/pages/figure-modeling.pug
+++ b/wp-content/themes/expert-massage/views/pages/figure-modeling.pug
@@ -52,7 +52,8 @@ block variables
       }
     ]
     pageData.massageResults.title = 'Результаты ручного моделирования'
-    pageData.massageResults.figure.slidesOrder = [9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
+    pageData.massageResults.figure.slidesOrder.rest = [15, 16, 17, 18]
+    pageData.massageResults.figure.slidesOrder.current = [9, 10, 11, 12, 13, 14]
     pageData.reviewsBlock.title = 'Отзывы о&nbsp;ручном моделировании фигуры'
     pageData.featuresBlock = {
       heading: 'Что вы получите от&nbsp;ручного моделирования',
