--- a/wp-content/themes/expert-massage/views/pages/mas-anti-2.pug
+++ b/wp-content/themes/expert-massage/views/pages/mas-anti-2.pug
@@ -38,7 +38,8 @@ block variables
       }
     ]
     pageData.massageResults.title = 'Результаты антицеллюлитного массажа'
-    pageData.massageResults.figure.slidesOrder = [17, 15, 16, 18, 9, 10, 11, 12, 13, 14]
+    pageData.massageResults.figure.slidesOrder.current = [17, 15, 16, 18]
+    pageData.massageResults.figure.slidesOrder.rest = [9, 10, 11, 12, 13, 14]
     pageData.reviewsBlock.title = 'Отзывы об&nbsp;антицеллюлитном массаже'
     pageData.featuresBlock = {
       heading: 'Что вы получите от&nbsp;антицеллюлитного массажа',
