--- a/wp-content/themes/expert-massage/views/includes/modules/content/massage-results/figure.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/massage-results/figure.pug
@@ -1,22 +1,43 @@
 - var figureResults = pageData.massageResults.figure
+- var initialCurrentPhotos = figureResults.slidesOrder.current
+- var initialRestPhotos = figureResults.slidesOrder.rest
+//- Slides list order: 1st - main slide with descriptions
 - var slidesList = ['main-2']
 - var additionalCurrentPhotos = []
 - var additionalRestPhotos = []
-each photoId in figureResults.slidesOrder.current
-  - slidesList.push(figureResults.photos[photoId])
+- var currentCollagePhotos = []
+- var restCollagePhotos = []
+
 each photo in figureResults.photos
   if photo.massage_id === pageData.theme
-    - additionalCurrentPhotos.push(photo)
+    if photo.collage
+      - currentCollagePhotos.push(photo)
+    else if (initialCurrentPhotos.indexOf(photo.id) === -1)
+      - additionalCurrentPhotos.push(photo)
   else
-    - additionalRestPhotos.push(photo)
+    if photo.collage
+      - restCollagePhotos.push(photo)
+    else if (initialRestPhotos.indexOf(photo.id) === -1)
+      - additionalRestPhotos.push(photo)
+
+//- Slides list order: 2nd - collages for current massage
+each collagePhoto in currentCollagePhotos
+  - slidesList.push(collagePhoto)
+//- Slides list order: 3rd - single photos for current massage added later
 each photo in additionalCurrentPhotos
-  if (slidesList.indexOf(photo) === -1)
-    - slidesList.push(photo)
-each photoId in figureResults.slidesOrder.rest
+  - slidesList.push(photo)
+//- Slides list order: 4th - single photos for current massage from initial list
+each photoId in initialCurrentPhotos
   - slidesList.push(figureResults.photos[photoId])
+//- Slides list order: 5th - collages for rest massages
+each collagePhoto in restCollagePhotos
+  - slidesList.push(collagePhoto)
+//- Slides list order: 6th - single photos for rest massages added later
 each photo in additionalRestPhotos
-  if (slidesList.indexOf(photo) === -1)
-    - slidesList.push(photo)
+  - slidesList.push(photo)
+//- Slides list order: 7th - single photos for rest massages from initial list
+each photoId in initialRestPhotos
+  - slidesList.push(figureResults.photos[photoId])
 
 mixin figure-slide(slide)
   .figure-results__slide(class=`figure-results__slide_${slide.id}`)
