--- a/wp-content/themes/expert-massage/views/pages/classic-facial-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/classic-facial-massage.pug
@@ -36,8 +36,7 @@ block variables
       }
     ]
     pageData.massageResults.title = 'Результаты массажа лица'
-    pageData.massageResults.face.slidesOrder.current = [6, 7]
-    pageData.massageResults.face.slidesOrder.rest = [1, 2, 3, 4, 5]
+    pageData.massageResults.face.slidesOrder = [1, 2, 3, 4, 5, 6, 7]
     pageData.reviewsBlock.title = 'Отзывы о&nbsp;массаже лица'
     pageData.featuresBlock = {
       heading: 'Что вы получите от&nbsp;классического массажа',
