--- a/wp-content/themes/expert-massage/views/pages/index.pug
+++ b/wp-content/themes/expert-massage/views/pages/index.pug
@@ -43,8 +43,7 @@ block variables
     pageData.reviewsBlock.title = 'Отзывы о&nbsp;нас'
     pageData.reviewsBlock.showSticker = true
     pageData.massageResults.title = 'Результаты массажа'
-    pageData.massageResults.face.slidesOrder.current = []
-    pageData.massageResults.face.slidesOrder.rest = [1, 2, 3, 4, 5, 6, 7]
+    pageData.massageResults.face.slidesOrder = [1, 2, 3, 4, 5, 6, 7]
     pageData.massageResults.figure.slidesOrder.current = []
     pageData.massageResults.figure.slidesOrder.rest = [9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
     pageData.priceList = {
