--- a/wp-content/themes/expert-massage/views/pages/kontakty.pug
+++ b/wp-content/themes/expert-massage/views/pages/kontakty.pug
@@ -7,31 +7,36 @@ block variables
       keywords: `массаж, центр, Москва, контакты, адрес, телефон, метро`,
       pageClass: 'contact-info service-page',
       theme: 'main',
-      placementPhoto: {
-        desktop: {
-          webp: {
-            '1x': `${THEME_IMG_PATH}/contacts-page/placement-photo_desktop@1x.webp`,
-            '2x': `${THEME_IMG_PATH}/contacts-page/placement-photo_desktop@2x.webp`
-          },
-          jpg: {
-            '1x': `${THEME_IMG_PATH}/contacts-page/placement-photo_desktop@1x.jpg`,
-            '2x': `${THEME_IMG_PATH}/contacts-page/placement-photo_desktop@2x.jpg`
+      placementPhoto: [
+        {
+          desktop: false,
+          tablet: false,
+          mobile: {
+            webp: {
+              '1x': `${THEME_IMG_PATH}/contacts-page/placement-photo-1@1x.webp`,
+              '2x': `${THEME_IMG_PATH}/contacts-page/placement-photo-1@2x.webp`
+            },
+            jpg: {
+              '1x': `${THEME_IMG_PATH}/contacts-page/placement-photo-1@1x.jpg`,
+              '2x': `${THEME_IMG_PATH}/contacts-page/placement-photo-1@2x.jpg`
+            }
           }
         },
-        tablet: false,
-        mobile: {
-          webp: {
-            '1x': `${THEME_IMG_PATH}/contacts-page/placement-photo_mobile@1x.webp`,
-            '2x': `${THEME_IMG_PATH}/contacts-page/placement-photo_mobile@2x.webp`,
-            '3x': `${THEME_IMG_PATH}/contacts-page/placement-photo_mobile@3x.webp`
-          },
-          jpg: {
-            '1x': `${THEME_IMG_PATH}/contacts-page/placement-photo_mobile@1x.jpg`,
-            '2x': `${THEME_IMG_PATH}/contacts-page/placement-photo_mobile@2x.jpg`,
-            '3x': `${THEME_IMG_PATH}/contacts-page/placement-photo_mobile@3x.jpg`
+        {
+          desktop: false,
+          tablet: false,
+          mobile: {
+            webp: {
+              '1x': `${THEME_IMG_PATH}/contacts-page/placement-photo-2@1x.webp`,
+              '2x': `${THEME_IMG_PATH}/contacts-page/placement-photo-2@2x.webp`
+            },
+            jpg: {
+              '1x': `${THEME_IMG_PATH}/contacts-page/placement-photo-2@1x.jpg`,
+              '2x': `${THEME_IMG_PATH}/contacts-page/placement-photo-2@2x.jpg`
+            }
           }
         }
-      },
+      ],
       hasMap: true
     }
 
@@ -61,7 +66,8 @@ block content
             h2.contact-info__subtitle Мы в соцсетях:
             +socials({ ig: ['24', '23'], vk: ['36', '22'], fb: ['24', '24'] })
         .contact-info__right-column
-          +picture-tag(pageData.placementPhoto, pageData.placementPhoto.desktop.jpg['2x'], globalData.company.address.replace('<br>', ', ')).contact-info__placement-photo
+          +picture-tag(pageData.placementPhoto[0], pageData.placementPhoto[0].desktop.jpg['2x'], globalData.company.address.replace('<br>', ', ')).contact-info__placement-photo.hidden_desktop-tablet
+          +picture-tag(pageData.placementPhoto[1], pageData.placementPhoto[1].desktop.jpg['2x'], globalData.company.address.replace('<br>', ', ')).contact-info__placement-photo
       include ../includes/modules/footer/map-block
 
 block script
