Add link to yandex maps reviews

--- a/wp-content/themes/expert-massage/src/assets/scss/blocks/reviews-block/rating-block.scss
+++ b/wp-content/themes/expert-massage/src/assets/scss/blocks/reviews-block/rating-block.scss
@@ -1,6 +1,10 @@
 @use '../../tools' as *;
 
 .rating-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   &__number {
     font-size: 5.4rem;
   }
