--- a/wp-content/themes/expert-massage/views/utils/global-data.pug
+++ b/wp-content/themes/expert-massage/views/utils/global-data.pug
@@ -179,10 +179,13 @@ each massage in globalData.massages
       smallText: `честных <a class='link link_primary underline' href='/reviews/'>отзывов</a>
         с&nbsp;${globalData.company.foundationYear}&nbsp;по&nbsp;${globalData.currentYear}
         <span class='main-screen__feature-rating'>
-          <span>рейтинг&nbsp;в&nbsp;Яндекс&nbsp;<span aria-hidden='true'>5</span></span>
-          <svg class='rating-block__star-icon' width='20' height='20' aria-label='5 звёзд'>
-            <use xlink:href='#star-icon'></use>
-          </svg>
+          рейтинг&nbsp;в&nbsp;
+          <a class='link link_primary underline' href='https://yandex.ru/maps/org/klinika_professionalnogo_massazha_expert/92492362215/?ll=37.615363%2C55.774188&utm_source=main_stripe_big&z=13' target='_blank'>
+            Яндекс&nbsp;<span aria-hidden='true'>5</span>
+            <svg class='rating-block__star-icon' width='20' height='20' aria-label='5 звёзд'>
+              <use xlink:href='#star-icon'></use>
+            </svg>
+          </a>
         </span>`
     }
   ]
